Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18323

cmake project does not include "test" target

XMLWordPrintable

      The old cmake project offered a "test" target like "all", "install" "clean". The others are still available, but target "test" isn't.

      The use case for me is to use the locator to run all unit tests (boost unit-test framework). Which was easy and fast by pressing Ctrl-k -> "cm test" -> Enter

        For Gerrit Dashboard: QTCREATORBUG-18323
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            schwann Guenter Schwann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes